* Experimental support of SQLite database (saving finished transfers).
*** eiskaltdcpp-gtk ***
* Improvements in the search widget.
* Fixed path to lock file of launched program (it was ~/.dc++/). Now it launches only one instance of the DC-client and magnet-links are correctly intercepted by it.
* Added hot keys Left/Right to expand the directory tree in the widget view a list of files.

--- 2.1.1 2010-11-21 ---
*** common changes ***
* Fixed TigerHash for ARM architecture.
* -DUSE_MINIUPNP is set to OFF by default.
* Fixed issue with blocking ports on restarting the program.
* Added ability to use pcre library for regex in perl style (see option PERL_REGEX in file INSTALL). Currently it uses only in ADL Search.
*** eiskaltdcpp-qt ***
* Fixed crash when deleting last characters in the input field of the chat by using the Backspace. (The problem manifested only with Qt 4.7.1)
* Optimized link parser. Very long new chat messages are displayed much faster.
* Fixed opening torrent's magnet links from chat.
* Added ability to forced change the background color in the chat.
* Fixed wrong icon path for App Bundle in Mac OS X. (The problem was added in 2.1.0)
* BBСode support in the chat ([b][/b], [u][/u], [i][/i]).
* Support for *bold* and _underlined_ text like in Psi.
*** eiskaltdcpp-gtk ***
* Improvements in the main menu.
* Improvements in the toolbar.
* BBСode support in the chat ([b][/b], [u][/u], [i][/i]).

--- 2.1.0 2010-11-07 ---
*** common changes ***
* libeiskaltdcpp library was separated from the basic binary file for unix-like systems.
* Added localization of kernel messages. Gettext used.
* Added ability to use Lua-scripts (see the file INSTALL).
* Added ability to use miniUPnP for connection (see file INSTALL).
* Added set of sound files from the FlylinkDC++ project.
* Kernel (dcpp) was partially updated to version 0.777.
* Added NATT (see http://www.adcportal.com/wiki/index.php/NATT_-_NAT_traversal)