@@ -44,6 +44,10 @@
 * Улучшения в виджете поиска.
 * Исправлен путь к файлу блокировки повторного запуска программы (он был в ~/.dc++/). Теперь запускается лишь один экземпляр DC-клиента и правильно перехватываются magnet-ссылки.
 * Добавлены горячие клавиши Влево/Вправо для разворачивания дерева каталогов в виджете просмотра списка файлов.
+*** eiskaltdcpp-daemon ***
+* Начата разработка. Внимание: программа еще не готова для использования!
+* На данный момент это неуправляемый демон. Вы можете только запускать его и убивать.
+* Запущенный процесс (см. man-страницу) подхватывает настройки из файлов конфигурации, созданные вручную или с помощью графических интерфейсов на Qt или Gtk. В результате: продолжаются начатые загрузки, пользователям доступны ваша шара и т.п..
 
 --- 2.1.1 2010-11-21 ---
 *** общие изменения ***
