@@ -44,6 +44,10 @@
 * Покращення у віджетi пошуку.
 * Виправлено шлях до файлу блокування повторного запуску програми (він був у ~/.dc++/). Тепер запускається лише один примірник DC-клієнта і правильно перехоплюються magnet-посилання.
 * Додані гарячі клавіші Вліво/Вправо для розгортання дерева каталогів в віджет перегляду списку файлів.
+*** eiskaltdcpp-daemon ***
+* Розпочато розробку. Увага: програма ще не готова для використання!
+* На даний момент це некерований демон. Ви можете тільки запускати його і вбивати.
+* Запущений процес (див. man-сторінку) підхоплює налаштування з файлів конфігурації, створені вручну або за допомогою графічних інтерфейсів на Qt або Gtk. У результаті: тривають розпочаті завантаження, користувачам доступна ваша шара тощо.
 
 --- 2.1.1 2010-11-21 ---
 *** загальні зміни ***
