@@ -1,0 +1,37 @@
+.TH "eiskaltdcpp-daemon" 1 "10 Jan 2011"
+.SH "NAME"
+nasdc \- simple uncontrollable daemon
+.SH "SYNOPSIS"
+.PP
+.B eiskaltdcpp-daemon
+\-d
+.br
+.B eiskaltdcpp-daemon
+<Key>
+.SH "DESCRIPTION"
+.PP
+\fBEiskaltDC++\fP is a cross-platform program that uses the Direct Connect and ADC protocol. It is compatible with other DC clients, such as the original DC from Neomodus, DC++ and derivatives. EiskaltDC++ also interoperates with all common DC hub software.
+.SH "COMMAND LINE OPTIONS"
+.RB "A summary of options is included below."
+.TP
+.BR "\-d"
+run program as daemon
+.TP
+.BR "\-h,  \-\-help"
+display help and exit
+.TP
+.BR "\-v,  \-\-version"
+output version information and exit
+.SH "FILES"
+.TP
+.B "~/.config/eiskaltdc++/" or "$XDG_CONFIG_HOME/eiskaltdc++/"
+Directory with configuration files
+.SH AUTHOR
+This program was written by Andrey Karlov <dein.negativ@gmail.com> and others (see file AUTHORS).
+.br
+EiskaltDC++ homepage: \fBhttp://code.google.com/p/eiskaltdc/\fR
+.SH "BUG REPORTS"
+If you find a bug in EiskaltDC++ please report it here:
+.B http://code.google.com/p/eiskaltdc/issues/list
+.PP
+This manual page was written by Boris Pek <tehnick-8@mail.ru> for the Debian project (and may be used by others).
