@@ -1,0 +1,94 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<HTML><HEAD><TITLE>Man page of eiskaltdcpp-daemon</TITLE>
+</HEAD><BODY>
+<H1>eiskaltdcpp-daemon</H1>
+Section: User Commands  (1)<BR>Updated: 10 Jan 2011<BR><A HREF="#index">Index</A>
+<A HREF="/cgi-bin/man/man2html">Return to Main Contents</A><HR>
+
+<A NAME="lbAB">&nbsp;</A>
+<H2>NAME</H2>
+
+nasdc - simple uncontrollable daemon
+<A NAME="lbAC">&nbsp;</A>
+<H2>SYNOPSIS</H2>
+
+<P>
+
+<B>eiskaltdcpp-daemon</B>
+
+-d
+<BR>
+
+<B>eiskaltdcpp-daemon</B>
+
+&lt;Key&gt;
+<A NAME="lbAD">&nbsp;</A>
+<H2>DESCRIPTION</H2>
+
+<P>
+
+<B>EiskaltDC++</B> is a cross-platform program that uses the Direct Connect and ADC protocol. It is compatible with other DC clients, such as the original DC from Neomodus, DC++ and derivatives. EiskaltDC++ also interoperates with all common DC hub software.
+<A NAME="lbAE">&nbsp;</A>
+<H2>COMMAND LINE OPTIONS</H2>
+
+A summary of options is included below.
+
+<DL COMPACT>
+<DT><B>-d</B>
+
+<DD>
+run program as daemon
+<DT><B>-h,  --help</B>
+
+<DD>
+display help and exit
+<DT><B>-v,  --version</B>
+
+<DD>
+output version information and exit
+</DL>
+<A NAME="lbAF">&nbsp;</A>
+<H2>FILES</H2>
+
+<DL COMPACT>
+<DT><B>~/.config/eiskaltdc++/ or $XDG_CONFIG_HOME/eiskaltdc++/</B>
+
+<DD>
+Directory with configuration files
+</DL>
+<A NAME="lbAG">&nbsp;</A>
+<H2>AUTHOR</H2>
+
+This program was written by Andrey Karlov &lt;<A HREF="mailto:dein.negativ@gmail.com">dein.negativ@gmail.com</A>&gt; and others (see file AUTHORS).
+<BR>
+
+EiskaltDC++ homepage: <B><A HREF="http://code.google.com/p/eiskaltdc/">http://code.google.com/p/eiskaltdc/</A></B>
+<A NAME="lbAH">&nbsp;</A>
+<H2>BUG REPORTS</H2>
+
+If you find a bug in EiskaltDC++ please report it here:
+<B><A HREF="http://code.google.com/p/eiskaltdc/issues/list">http://code.google.com/p/eiskaltdc/issues/list</A></B>
+
+<P>
+
+This manual page was written by Boris Pek &lt;<A HREF="mailto:tehnick-8@mail.ru">tehnick-8@mail.ru</A>&gt; for the Debian project (and may be used by others).
+<P>
+
+<HR>
+<A NAME="index">&nbsp;</A><H2>Index</H2>
+<DL>
+<DT><A HREF="#lbAB">NAME</A><DD>
+<DT><A HREF="#lbAC">SYNOPSIS</A><DD>
+<DT><A HREF="#lbAD">DESCRIPTION</A><DD>
+<DT><A HREF="#lbAE">COMMAND LINE OPTIONS</A><DD>
+<DT><A HREF="#lbAF">FILES</A><DD>
+<DT><A HREF="#lbAG">AUTHOR</A><DD>
+<DT><A HREF="#lbAH">BUG REPORTS</A><DD>
+</DL>
+<HR>
+This document was created by
+<A HREF="/cgi-bin/man/man2html">man2html</A>,
+using the manual pages.<BR>
+Time: 22:15:04 GMT, January 09, 2011
+</BODY>
+</HTML>
